@@ -171,16 +171,22 @@
                     <scanIntervalSeconds>5</scanIntervalSeconds>
                 </configuration>
             </plugin>
+            <!-- tomcat -->
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>tomcat-maven-plugin</artifactId>
-                <version>1.1</version>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>${tomcat.maven.version}</version>
                 <configuration>
-                    <port>80</port>
+                    <port>8080</port>
                     <path>/</path>
                     <uriEncoding>UTF-8</uriEncoding>
+                    <!-- spring profile  -->
+                    <systemProperties>
+                        <JAVA_OPTS>-Xms256m -Xmx768m -XX:MaxPermSize=256m</JAVA_OPTS>
+                    </systemProperties>
                 </configuration>
             </plugin>
+
             <plugin>
                 <!-- war插件 -->
                 <groupId>org.apache.maven.plugins</groupId>
@@ -199,7 +205,7 @@
                     <encoding>UTF-8</encoding>
                     <verbose>true</verbose>
                     <fork>true</fork>
-                    <executable>${JAVA8_HOME}</executable>
+                    <!--<executable>${JAVA8_HOME}</executable>-->
                 </configuration>
             </plugin>
         </plugins>
